#	$NetBSD: CHANGES-1.5.2,v 1.1.2.18 2001/08/16 17:03:05 tv Exp $

A complete list of changes from NetBSD 1.5.1 to NetBSD 1.5.2:

File						Revision(s)
----						--------

sys/sys/param.h					patch
sys/conf/osrelease.sh				patch
share/tmac/doc-common				patch

  Mark this release as 1.5.2_ALPHA.

libexec/telnetd/authenc.c			1.8
libexec/telnetd/termstat.c			1.8
libexec/telnetd/ext.h				1.13
libexec/telnetd/state.c				1.17 via patch
libexec/telnetd/sys_term.c			1.23 via patch
libexec/telnetd/telnetd.c			1.26
libexec/telnetd/telnetd.h			1.7
libexec/telnetd/utility.c			1.18 via patch

  Security-related fixups for telnet
    Bound-check all "*nfrontp++" code.  From OpenBSD and Heimdal.
    Complain if file descriptor goes above FD_SETSIZE.  From OpenBSD.

crypto/dist/openssl/crypto/rand/md_rand.c	1.2

  Fix a pseudo-random number generator weakness. Noted on bugtraq.

sys/arch/i386/include/reg.h			1.16

  Redefine register offsets using offsetof().  Fixes math emulation
  lossage.

etc/services					1.44,1.47-1.50

  Rename old BSD ``kpasswd'' to ``kpwd'', add ``ripng'', ``sstp'',
  and AFS services.  Fixes PR#11139.

distrib/notes/macppc/hardware			1.17
distrib/notes/macppc/install			1.15
distrib/notes/macppc/prep			1.20
distrib/notes/macppc/whatis			1.4
distrib/notes/common/main			1.132

  Clarify explanations and add additional deail about known problems
  with two models.

distrib/utils/sysinst/Makefile.inc		1.10

  Add dependency for menu files on osrelease.sh.

dist/ipf/fils.c					1.11
usr.sbin/ipf/ipfstat/Makefile			1.14
usr.sbin/ipf/Makefile.inc			1.8

  Enable ``top''-like running state display in ``ipfstat''.
  Fixes PR#13404.

share/misc/bsd-family-tree			1.8-1.9

  Update to state after NetBSD-1.5.1.

sys/kern/kern_proc.c				1.44

  When freeing a session, remove the reference to it from the
  associated tty.

distrib/notes/macppc/hardware			1.18-1.19

  Add ``iMac (Summer 2000)'' (confirmed working); correct D-Link
  DFE-530TX driver reference.
